# softsynth

./: collect_times.py  collect_times_remote.sh  plots.R  times.csv
rosette/: softmax-interpreter.rkt  synth-remote.sh
rust/: Cargo.toml
rust/src/: main.rs
