[package]
name = "softsynth"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
clap = { version = "4.3.0", features = ["derive"] }
rand = "0.8.5"
rayon = "1.7.0"
smallvec = "1.10.0"
thiserror = "1.0.40"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
